--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.7",
     "firebase": "^10.13.0",
     "gh-pages": "^6.1.1",
     "jwt-decode": "^4.0.0",
