--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@mui/material": "^6.1.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
+    "canvas-confetti": "^1.9.3",
     "firebase": "^10.13.0",
     "gh-pages": "^6.1.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
