--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,12 @@
     "theme_color": "#007bff",
     "icons": [
       {
-        "src": "/albatros.png",
+        "src": "/albatros192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "/albatros.png",
+        "src": "/albatros512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
