--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
     "theme_color": "#007bff",
     "icons": [
       {
-        "src": "/albatros192.png",
+        "src": "./albatros192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
