--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "canvas-confetti": "^1.9.3",
     "firebase": "^10.13.0",
     "gh-pages": "^6.1.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/canvas-confetti": "^1.6.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
