se creo api para subir imagenes de tarjeta propiedad

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gh-pages": "^6.1.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
@@ -31,7 +32,7 @@
     "@eslint/js": "^9.9.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/js-cookie": "^3.0.6",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
