--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@react-oauth/google": "^0.12.1",
-    "axios": "^1.7.7",
+    "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
     "firebase": "^10.13.0",
     "gh-pages": "^6.1.1",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/axios": "^0.9.36",
     "@types/canvas-confetti": "^1.6.4",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.18",
