--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
+    "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
@@ -35,6 +36,7 @@
     "@types/axios": "^0.9.36",
     "@types/canvas-confetti": "^1.6.4",
     "@types/js-cookie": "^3.0.6",
+    "@types/qs": "^6.14.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
