--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.555.0",
     "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
