--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@react-oauth/google": "^0.12.1",
+    "@react-pdf/renderer": "^4.3.1",
     "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
     "firebase": "^10.13.0",
