--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-spinners": "^0.14.1",
     "sweetalert2": "^11.15.10"
   },
